---------------------------------------------------------------------------------------------------
Version: 1.1.32
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.31
Date: 2025-01-22
  Changes:
    - (Missing.)
---------------------------------------------------------------------------------------------------
Version: 1.1.30
Date: 2025-01-22
  Bugfixes:
    - Bugfix new API.
---------------------------------------------------------------------------------------------------
Version: 1.1.29
Date: 2025-01-22
  Changes:
    - Properly export new API.
---------------------------------------------------------------------------------------------------
Version: 1.1.28
Date: 2025-01-22
  Modding:
    - Simpler API for cargo drops technologies.
---------------------------------------------------------------------------------------------------
Version: 1.1.27
Date: 2025-01-19
  Changes:
    - Updated the orbit image generation script.
  Locale:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.1.26
Date: 2025-01-15
  Changes:
    - Readded PlanetsLib.borrow_music.
---------------------------------------------------------------------------------------------------
Version: 1.1.25
Date: 2025-01-15
  Changes:
    - Removed PlanetsLib.borrow_music for now until issues can be resolved.
---------------------------------------------------------------------------------------------------
Version: 1.1.24
Date: 2025-01-14
  Locale:
    - Fixed locale key.
---------------------------------------------------------------------------------------------------
Version: 1.1.23
Date: 2025-01-14
  Bugfixes:
    - Fixed crash when a planet has no surface properties.
---------------------------------------------------------------------------------------------------
Version: 1.1.22
Date: 2025-01-14
  Features: