@@ -2,11 +2,12 @@
 Version: 1.1.32
 Date: ????
   Changes:
+    - New APIs restrict_surface_conditions and relax_surface_conditions.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.31
 Date: 2025-01-22
   Changes:
-    - (Missing.)
+    - (No changes.)
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.30
 Date: 2025-01-22
